--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <h1>Estudiante Gonzalez</h1> 
    <h2>Desarrollador Full Stack</h2>
    <img src="images.png" alt="foto-cv">
+   <h3>Datos personales</h3>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis tempore eaque esse numquam! Rem architecto atque asperiores beatae aliquam modi, quod praesentium aperiam a earum consequuntur adipisci ipsum sit voluptatem quia quaerat inventore possimus expedita maiores! Delectus, nisi molestiae assumenda voluptas quod labore non impedit animi consectetur qui quaerat laborum soluta libero nobis unde ducimus voluptatum laudantium, perferendis vel harum. Et, modi pariatur. Eum dolor provident ex voluptatum inventore tempore corporis harum, ducimus voluptates rem ad deleniti sapiente ea nesciunt suscipit quis earum et corrupti sit? Ducimus numquam eum accusamus, ab necessitatibus doloribus provident, repellendus quis aspernatur distinctio praesentium porro.</p>
    <h3>Experiencia Laboral</h3>
    <ul>
     <li>Experiencia</li>
